- Re-factor files to eliminate dependency of the jax-rpc handler on org.apache.ws.axis package - Add Venkat's contribution (WSS4JHandler) - Add Test for Scenario3 using the WSS4JHandler